--- a/angular.json
+++ b/angular.json
@@ -25,13 +25,15 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-	      "src/api/dishes"
+              "src/api/dishes"
             ],
             "styles": [
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": [
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -100,9 +102,21 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "restaurant"
+  "defaultProject": "restaurant",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
