--- a/package.json
+++ b/package.json
@@ -3,49 +3,61 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint --fix",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.1",
-    "@angular/common": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/core": "~12.0.1",
-    "@angular/forms": "~12.0.1",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
-    "@ngrx/data": "^13.0.2",
-    "@ngrx/effects": "^13.0.2",
-    "@ngrx/store": "^13.0.2",
-    "bootstrap": "^5.0.1",
+    "@angular/animations": "^13.3.2",
+    "@angular/cdk": "^13.3.2",
+    "@angular/common": "^13.3.2",
+    "@angular/compiler": "^13.3.2",
+    "@angular/core": "^13.3.2",
+    "@angular/forms": "^13.3.2",
+    "@angular/material": "^13.3.2",
+    "@angular/platform-browser": "^13.3.2",
+    "@angular/platform-browser-dynamic": "^13.3.2",
+    "@angular/router": "^13.3.2",
+    "@ngrx/effects": "^13.1.0",
+    "@ngrx/store": "^13.1.0",
+    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.6.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "webpack": "^5.70.0",
+    "rxjs": "^7.5.5",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.16",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
+    "@angular-devkit/build-angular": "^13.0.4",
+    "@angular-eslint/builder": "13.2.0",
+    "@angular-eslint/eslint-plugin": "13.2.0",
+    "@angular-eslint/eslint-plugin-template": "13.2.0",
+    "@angular-eslint/schematics": "13.2.0",
+    "@angular-eslint/template-parser": "13.2.0",
+    "@angular/cli": "^13.3.2",
+    "@angular/compiler-cli": "^13.3.2",
+    "@types/jasmine": "^4.0.2",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jasmine-core": "^4.0.1",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-opera-launcher": "^1.0.0",
-    "typescript": "~4.2.3"
+    "prettier": "^2.6.2",
+    "prettier-eslint": "^13.0.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
-  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 12.0.1.",
+  "description": "Restaurant frontend app made with angular",
   "main": "karma.conf.js",
   "author": "Ritik Singla",
   "license": "ISC"
