deployed on azure via circleci

--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,11 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
-          "strict": true
-        }
+        	"strict": true
+        },
+        "@schematics/angular:component": {
+        	"style": "scss"
+		}
       },
       "root": "",
       "sourceRoot": "src",
@@ -40,8 +43,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "5mb",
+                  "maximumError": "10mb"
                 },
                 {
                   "type": "anyComponentStyle",
