--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "restaurant",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve -o",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint --fix",
+    "ng": "./node_modules/@angular/cli/bin/ng",
+    "start:dev": "ng serve -o",
+    "build:dev": "ng build",
+    "test:dev": "ng test",
+    "lint:dev": "ng lint --fix",
+    "start:prod": "ng serve",
+    "build:prod": "ng build --configuration=production",
+    "test:prod": "ng test --watch=false --progress=false --browsers=ChromeHeadlessCI",
+    "lint:prod": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -31,7 +35,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.4",
-    "@angular-eslint/builder": "13.2.0",
+    "@angular-eslint/builder": "^12.2.1",
     "@angular-eslint/eslint-plugin": "13.2.0",
     "@angular-eslint/eslint-plugin-template": "13.2.0",
     "@angular-eslint/schematics": "13.2.0",
